syntax = "proto3";

option java_multiple_files = true;
package be.cloud;

message PlayerRequest {
  string playerName = 1;
}

message PlayerStatus {
  string playerName = 1;
  int32 heartRate = 2;
  float lactate = 3;
  bool exhausted = 4;
}

service AnalyticsService {
  rpc GetPlayerStatus(PlayerRequest) returns (PlayerStatus);
}